Annotation tool placed on view with thickness 0 is invisible #58196

Closed
opened 2018-11-29 22:10:21 +01:00 by Alaska · 3 comments
Member

System Information:
CPU: Ryzen 5 2600
GPU: RX 570 4GB
OS: Windows 10 Home

Blender Version
Broken: Blender 2.8 Beta 26d5a3625e

Short description of error:
When the annotation tool has it's placement option changed to view and the thickness of the stroke is set to zero, it's invisible. This is caused by the thickness being zero and an adjustment should be made to stop zero thickness from ever being obtained (You already can't set the thickness to zero, it just occurs as a bug in the scene detailed below.)

Exact steps for others to reproduce the error:

  1. Open Blender and switch the 3D viewport if you haven't already. (Load factory settings if you've adjusted anything just to be on the safe side)
  2. Select the measurement tool from the tool bar and make a measurement.
  3. Select the annotate tool from the tool bar and in the top bar adjust the placement option to "view".
  4. Draw something on the scene. Once you confirm the action (let go of the mouse), the drawing will disappear.

This is because the line thickness is zero. Try adjusting the line thickness and you'll notice that you can never go back to zero, suggesting this is a bug. This bug only occurs if the measurement tool is used before the annotate tool and no line presets are set.

**System Information:** CPU: Ryzen 5 2600 GPU: RX 570 4GB OS: Windows 10 Home **Blender Version** Broken: Blender 2.8 Beta 26d5a3625ed **Short description of error:** When the annotation tool has it's placement option changed to view and the thickness of the stroke is set to zero, it's invisible. This is caused by the thickness being zero and an adjustment should be made to stop zero thickness from ever being obtained (*You already can't set the thickness to zero, it just occurs as a bug in the scene detailed below.*) **Exact steps for others to reproduce the error:** 1. Open Blender and switch the 3D viewport if you haven't already. (*Load factory settings if you've adjusted anything just to be on the safe side*) 2. Select the measurement tool from the tool bar and make a measurement. 3. Select the annotate tool from the tool bar and in the top bar adjust the placement option to "view". 4. Draw something on the scene. Once you confirm the action (*let go of the mouse*), the drawing will disappear. This is because the line thickness is zero. Try adjusting the line thickness and you'll notice that you can never go back to zero, suggesting this is a bug. This bug only occurs if the measurement tool is used before the annotate tool and no line presets are set.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Antonio Vazquez self-assigned this 2018-11-29 22:17:50 +01:00

This issue was referenced by c754b2239c

This issue was referenced by c754b2239c065a76386df211daf365da6ed56312

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58196
No description provided.