Fix T58196: Annotation thickness is 0

When the annotation is created by other tools, the thickness was set to 0